# biomassters

./: LICENSE  README.md  collate_ckpt.py  compute_stats.py  ensemble.py  install.sh  main.py  preprocessing.py  pyproject.toml  sample_selection.py  select_samples.py
hydra_plugins/: sp_plugin.py
hydra_plugins/hydra_optuna_sweeper/: _impl.py  optuna_sweeper.py
sample_selection/tile_list_best_months/: test.csv  train.csv
src/: conf.py  ema.py  ema2.py  logging.py  loss.py  optimizers.py  perceiver.py  relay.py  types.py  utils.py
src/algorithms/: __init__.py  base.py  erm.py
src/data/: __init__.py  datamodule.py  dataset.py  ds.py  stats.py  transforms.py
src/models/: __init__.py  factory.py  imputer.py  pipeline.py  unet3d_imagen.py  unet3d_vd.py
src/models/unet3d/: __init__.py  common.py  imagen.py  vd.py  vd2.py  vd_lite.py
src/relays/: __init__.py  ensemble.py  main.py
static_conf/alg/erm/: coslr.yaml
static_conf/checkpointer/: bio.yaml
static_conf/dm/: no_norm.yaml  norm.yaml
static_conf/dm/all_months/: aggressive_aug.yaml  base.yaml  better_impute.yaml  minmax_norm.yaml  mv_inf.yaml  mv_zero.yaml  no_pp.yaml  np.yaml  rc_128x128.yaml  rc_64x64.yaml  sentscale_clamp.yaml  torch.yaml  zscore_indices.yaml  zscore_norm.yaml
static_conf/dm/best_month/: clamp_minmax.yaml  clamp_only.yaml  indices.yaml  no_clamp.yaml  tcmoran.yaml
static_conf/experiment/unet3d/: spatial_128_dim.yaml  spatial_128dim.yaml  temporal_128dim.yaml
static_conf/experiment/unet3d_im/: efficient.yaml
static_conf/hydra/sweeper/: erm.yaml
static_conf/logger/: pal.yaml  prsn.yaml
static_conf/model/unet/: mit.yaml
static_conf/model/unet3d_im/: efficient.yaml
static_conf/model/unet3d_vd/: spatial_128dim.yaml  temporal_128dim.yaml
static_conf/model/unetpp/: rn50.yaml
